--- a/static/css/watertip_style.css
+++ b/static/css/watertip_style.css
@@ -12,6 +12,8 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #e0f7fa;
     overflow-x: hidden;
+    overflow-y:auto;
+    position: absolute;
 }
 
 /* Navbar stilizat */
@@ -19,6 +21,7 @@ body {
     background-color: #00796b;
     padding: 20px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    margin-bottom: 10px;
 }
 
 .navbar a {
@@ -33,10 +36,43 @@ body {
 }
 
 /* Border container */
+
+#top-container {
+    margin-top: 1%;
+    width: 100%;
+}
+#bottom-container {
+    height: fit-content;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+}
+
 .border-container {
     border-top: 3px solid #004d40;
     border-bottom: 3px solid #004d40;
-    padding: 10px;
+    padding-top: 10px;
+    width: 100%;
+    bottom: 0;
+}
+
+#bottom-container .border-container {
+    border-top: 3px solid #004d40;
+    border-bottom: 3px solid #004d40;
+    padding: 10px 0; /* Adjust padding for spacing */
+    margin-bottom: 5%;
+    position: static; /* Ensure normal document flow */
+}
+
+.bottom-container-top {
+    border-top: 3px solid #004d40;
+    border-bottom: 3px solid #004d40;
+    padding-top: 20px;
+    width: 100%;
+    position: absolute;
+    top: 5%;
 }
 
 /* Secțiunea de tips */
@@ -57,14 +93,26 @@ body {
     margin-bottom: 30px;
 }
 
+.systemdiv {
+    height: 60%;
+    width: 100%;
+    overflow: hidden;
+    
+}
+
 .system {
-perspective: 1000px;
+perspective: 900px;
 transform-style: preserve-3d;
 height: 51%;
 aspect-ratio: 1;
+padding-top: 1%;
+padding-bottom: 1%;
 rotate: 20deg;
-margin: auto;
-scale: 0.75;  
+transform: rotateX(-20deg);
+margin-left: 44%;
+margin-bottom: 5%;
+margin-top: 6%;
+scale: 1.4;  
 }  
 
 .central-point,
@@ -84,8 +132,7 @@ position: relative;
 --size: 80;
 height: calc(var(--size) * 1%);
 scale: 1.1;
-margin-top: 40%;
-margin-left: -10%;
+margin-left: -5%;
 background-image: url('../img/central_point.png');
 background-size: cover;
 }
@@ -94,7 +141,7 @@ background-size: cover;
 --size: 300;
 --duration: 24s;
 scale: 1;
-margin-left: -80%;
+margin-left: -90%;
 box-shadow: 0 0 0 2cqmin #5554, inset 0 0 0 2cqmin #5554;
 animation: orbit calc(var(--duration)) linear infinite;
 rotate: 1 0 0 -85deg;
@@ -103,13 +150,18 @@ rotate: 1 0 0 -85deg;
 .water-glass {
 --size: 18;
 --duration: 24s;;
-height: calc(var(--size) * 0.6%);
+height: calc(var(--size) * 0.8%);
 margin-left: calc(var(--size) * -0.35%);
+margin-right: 0px;
 
 background-image: url('../img/water_glass.png');
 background-size: cover;
 animation: planet calc(var(--duration)) linear infinite;
 rotate: 1 0 0 90deg;
+}
+
+.water-glass p {
+    padding: 0px;
 }
 
 .orbit:nth-child(1) {
@@ -169,7 +221,6 @@ rotate: 1 0 0 90deg;
 @keyframes orbit { to { transform: rotate3d(0, 0, 1,  360deg); } }
 
 
-
 /* Imaginea picăturii de apă centrală */
 .main-image {
     width: 250px;
@@ -183,9 +234,10 @@ rotate: 1 0 0 90deg;
     background-color: #00796b;
     color: white;
     padding: 20px;
-    border-radius: 8px;
     text-align: center;
-    margin-top: 40px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
 }
 
 .call-to-action a {
