--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{% static 'css/about_style.css' %}">
   <script  type="text/javascript" src="{% static 'js/database_operations.js' %}"></script>
   <script  type="text/javascript" src="{% static 'js/other_operations.js' %}"></script>
-  
+  <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
 </head>
 <script>
   const about_other_caller = new about_other_scripts();
