--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,10 +3,12 @@
 <head>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/profile_style.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
     <script type="text/javascript" src="{% static 'js/mapdata.js' %}"></script>		
     <script  type="text/javascript" src="{% static 'js/worldmap.js' %}"></script>
     <title>Water Conservation</title>
+    
 </head>
 <body>
 
