--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,6 +4,7 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/homepage_style.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
     <script type="text/javascript" src="{% static 'js/mapdata.js' %}"></script>		
     <script  type="text/javascript" src="{% static 'js/worldmap.js' %}"></script>
     <script  type="text/javascript" src="{% static 'js/database_operations.js' %}"></script>
