--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'css/login_style.css' %}">
-
+  <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
 </head>
 
 <body>
