--- a/templates/projects.html
+++ b/templates/projects.html
@@ -8,9 +8,9 @@
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'css/projects_style.css' %}">
+  <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
   <script  type="text/javascript" src="{% static 'js/database_operations.js' %}"></script>
   <script  type="text/javascript" src="{% static 'js/other_operations.js' %}"></script>
-  
 </head>
 
 <body>
