--- a/templates/watertips.html
+++ b/templates/watertips.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/watertip_style.css' %}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
     <title>Water Conservation Tips</title>
 
 </head>
