--- a/static/css/homepage_style.css
+++ b/static/css/homepage_style.css
@@ -1,6 +1,19 @@
 /* Navigation Bar Styling */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    zoom: 95%;
+}
+
 .navbar {
-    background-color: #003366; /* Albastru închis */
+    background-color: #00796b; /* Albastru închis */
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -9,14 +22,16 @@
 
 .navbar ul {
     list-style: none;
+    width: 100%;
     padding: 0;
     margin: 0;
-    display: flex;
-    align-items: center;
+    list-style-type: none;
+    overflow: hidden;
 }
 
 .navbar li {
     margin-right: 20px;
+    float: left;
 }
 
 .navbar a {
@@ -34,16 +49,20 @@
 
 /* Stilizarea pentru elementele din dreapta */
 .navbar li.login {
-    margin-left: auto;
+        
+    float: right;
 }
 
 /* Map Container Styling */
 #mapdiv {
+    zoom: 100%;
     height: 50%;
     padding: 20px;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    pointer-events: all;
 }
 
 /* Popup Styling */
@@ -85,7 +104,7 @@
 
 /* Footer Styling */
 footer {
-    background-color: #003366;
+    background-color: #00796b;
     color: white;
     text-align: center;
     padding: 20px 0;
