--- a/static/css/signup_style.css
+++ b/static/css/signup_style.css
@@ -7,6 +7,7 @@
 html, body {
   height: 100%; /* Full page height */
   width: 100%; /* Full page width */
+  zoom: 95%;
 }
 body {
   display: flex;
