--- a/static/css/watertip_style.css
+++ b/static/css/watertip_style.css
@@ -7,6 +7,7 @@
 
 html,
 body {
+    zoom: 95%;
     height: 100%;
     width: 100%;
     font-family: 'Roboto', sans-serif;
@@ -18,27 +19,49 @@ body {
 
 /* Navbar stilizat */
 .navbar {
-    background-color: #00796b;
-    padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    margin-bottom: 10px;
+    background-color: #00796b; /* Albastru închis */
+    padding: 22px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navbar ul {
+    list-style: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    overflow: hidden;
+}
+
+.navbar li {
+    margin-right: 20px;
+    float: left;
 }
 
 .navbar a {
-    color: white;
-    font-size: 18px;
     text-decoration: none;
-    margin: 0 15px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 20px;
+    border-radius: 5px;
 }
 
 .navbar a:hover {
-    color: #0288d1;
+    background-color: #002244; /* Un albastru și mai închis pentru hover */
+}
+
+/* Stilizarea pentru elementele din dreapta */
+.navbar li.login {
+        
+    float: right;
 }
 
 /* Border container */
 
 #top-container {
-    margin-top: 1%;
     width: 100%;
 }
 #bottom-container {
