--- a/templates/watertips.html
+++ b/templates/watertips.html
@@ -14,16 +14,18 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/watertips">Water Tips</a>
-        <a href="/projects">Projects</a>
-        {% if user.is_authenticated %}
-            <a class="login" href="/logout/">Log out</a>
-            <a class="login" href="/profile/">{{ user.username }}</a>
-        {% else %}
-            <a class="login" href="/login/">Log in</a>
-        {% endif %}
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/watertips/">Water Tips</a></li>
+            <li><a href="/projects/">Projects</a></li>
+            {% if user.is_authenticated %}
+                <li class="login"><a href="/logout/">Log out</a></li>
+                <li class="login"><a href="/profile/">{{ user.username }}</a></li>
+            {% else %}
+                <li class="login"><a href="/login/">Log in</a></li>
+            {% endif %}
+        </ul>
     </nav>
 
     <!-- Water Tips Section -->
