--- a/static/css/watertip_style.css
+++ b/static/css/watertip_style.css
@@ -277,3 +277,23 @@ rotate: 1 0 0 90deg;
 .login {
     float:right;
 }
+
+.hidden {
+    display: none;
+}
+
+.tip-info {
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    border-radius: 5px;
+}
+
+.tip-info button {
+    margin-top: 10px;
+}
