--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="{% static 'js/worldmap.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/database_operations.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/other_operations.js' %}"></script>
-    <title>Water Conservation</title>
+    <title>Homepage - Water Conservation</title>
 </head>
 
 <script>
