--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title>Login - Water Conservation</title>
   
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
