--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Sign Up</title>
+  <title>Sign Up - Water Conservation</title>
   
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
