--- a/templates/about.html
+++ b/templates/about.html
@@ -8,8 +8,7 @@
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
   <link rel="stylesheet" href="{% static 'css/about_style.css' %}">
-  <script  type="text/javascript" src="{% static 'js/database_operations.js' %}"></script>
-  <script  type="text/javascript" src="{% static 'js/other_operations.js' %}"></script>
+  <script  type="text/javascript" src="{% static 'js/about.js' %}"></script>
   <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
 </head>
 <script>
