--- a/templates/about.html
+++ b/templates/about.html
@@ -11,9 +11,6 @@
   <script  type="text/javascript" src="{% static 'js/about.js' %}"></script>
   <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}" >
 </head>
-<script>
-  const about_other_caller = new about_other_scripts();
-</script>
 <body>
   
   <!-- Navigation Bar -->
@@ -61,7 +58,7 @@
     {% endif %}
   </div>
   <script>
-    about_other_caller.mouse_swipe_behaiviour()
+    flashcardBehaiviour()
   </script>
 </body>
 </html>
