--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,6 +22,7 @@
             <li><a href="/watertips/">Water Tips</a></li>
             <li><a href="/projects/">Projects</a></li>
             <li><a href="/technologies/">Technologies</a></li>
+             <li><a href="/company/">Company</a></li>
             {% if user.is_authenticated %}
                 <li class="login"><a href="/logout/">Log out</a></li>
                 <li class="login"><a href="/profile/">{{ user.username }}</a></li>
